--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".Activitys.SettingActivity" />
         <activity android:name=".Activitys.GameActivity" />
         <activity android:name=".Activitys.DiaryActivity" />
+        <activity android:name=".Activitys.ResetPasswordActivity" />
+
 
     </application>
 
