--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
         <activity android:name=".Activitys.GameActivity" />
         <activity android:name=".Activitys.DiaryActivity" />
         <activity android:name=".Activitys.ResetPasswordActivity" />
+        <activity android:name=".Videos.activity.VideoActivity" />
+        <activity android:name=".Videos.activity.DetailsVideoActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name=".Activitys.TerminosActivity" />
+
+
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
