--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,11 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //Glide
-    implementation ("com.github.bumptech.glide:glide:4.11.0") 
+    implementation("com.github.bumptech.glide:glide:4.11.0") 
 
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
@@ -60,7 +63,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
    // implementation 'com.android.support.design:28.0.0'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-firestore:22.0.0'
+testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
