--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".Activitys.SettingActivity" />
         <activity android:name=".Activitys.GameActivity" />
         <activity android:name=".Activitys.DiaryActivity" />
+        <activity android:name=".Activitys.DetailDiaryActivity" />
         <activity android:name=".Activitys.ResetPasswordActivity" />
         <activity android:name=".Videos.activity.VideoActivity" />
         <activity
